2006-09-18  Johan Bilien <johan.bilien@nokia.com>

	* libhildonmenu/libhildonmenu.[ch], 
	  libhildonmenu/hildon-thumb-menu-item.[ch]: Added LGPL header
	* ibhildonmenu/hildon-thumb-menu-item.h: Removed duplicate code

2006-09-18  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-area.c: Fixed the leak of a string array

2006-09-18  Johan Bilien <johan.bilien@nokia.com>

	* libhildonmenu/libhildonmenu.c: Fixed the leak of a GtkTreePath and
	  2 strings. Fixes: NB#40645

2006-09-15  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-navigator/hn-app-switcher.c:
	* hildon-navigator/hildon-navigator-window.c:
	* hildon-navigator/hildon-navigator-window.h:
	* hildon-navigator/hn-wm.c:
	* hildon-navigator/hn-wm.h:
	* hildon-navigator/hn-others-button.c:
	* hildon-navigator/hn-others-button.h:
	- if you open app-switcher's menu and others menu is
	  already opened, the former closes the later. Fixes: NB#35154

2006-09-15  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "TN menu shows logical string §chat_ap_chat"
	Fixes: NB#37658
	* hildon-navigator/hn-wm-watchable-app.c: Always translate the
	  application name in the tooltip.

2006-09-15  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Task Navigator bg-kills applications it doesn't know how
	to resume" Fixes: NB#40028
	* hildon-navigator/hn-wm-watchable-app.c: Applications with no
	  desktop file shall not hibernate

2006-09-15  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Glib CRITICAL error from the TN application switcher menu"
	Fixes: NB#39653
	* hildon-navigator/hn-app-switcher.c: added safegard to not close
	  a NULL menu

2006-09-15  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.90

2006-09-15  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/*: Imported layout mode and applet management rewrite
	  Fixes: NB#40246, Fixes: NB#32663, Fixes: NB#36039, Fixes: NB#38283,
	  Fixes: NB#37073, Fixes: NB#39280, Fixes: NB#34074, Fixes: NB#31018,